--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "m6-ie-2022"
+name = "verden"
 version = "0.1.0"
 edition = "2021"
 authors = ["Santo Cariotti <santo@dcariotti.me>"]
