--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ http-body = "0.4.3"
 jsonwebtoken = "8.1"
 once_cell = "1.13"
 serde = { version = "1.0", features = ["derive"] }
+serde_with = "2.0.1"
 serde_json = "1.0"
 tokio = { version = "1.20", features = ["full"] }
 tracing = "0.1"
